U javapackager plugin execution